# sudokah

./: Cargo.toml  README.md  build.rs  install.sh  sudokah.rc
.cargo/: config.toml
.github/workflows/: android.yml  linux.yml  windows.yml
docs/: windows-testing.md
src/: lib.rs  main.rs
wix/: License.rtf  main.wxs
